# pytest-oarepo

./: .gitignore  AGENTS.md  README.md  format.sh  pyproject.toml  resolve_invenio.sh  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  release.yaml  test.yaml
pytest_oarepo/: __init__.py  constants.py  files.py  fixtures.py  functions.py  permission_generators.py  records.py  roles.py  users.py
pytest_oarepo/communities/: constants.py  fixtures.py  functions.py  records.py
pytest_oarepo/requests/: classes.py  constants.py  fixtures.py  functions.py
pytest_oarepo/ui/branding/semantic-ui/less/: theme.config
pytest_oarepo/ui/components/: __init__.py
pytest_oarepo/ui/i18n/semantic-ui/translations/messages/: index.js
pytest_oarepo/vocabularies/: __init__.py  config.py  fixtures.py  functions.py  loading.py
pytest_oarepo/vocabularies/data/: removalReasons.xlsx
pytest_oarepo/vocabularies/data/vocabularies/: catalogue.yaml
pytest_oarepo/workflows/: __init__.py  events.py  permission_generators.py
tests/: __init__.py  conftest.py  test_mock.py
