[project]
name = "pytest-oarepo"
dynamic = ["version"]
description = ""
readme = "README.md"
license = "MIT"

requires-python = ">=3.14,<3.15"

dependencies = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "deepmerge",

    # invenio dependencies with version constraints
    "invenio-access>=5.0.0,<6.0.0",
    "invenio-accounts>=7.0.0,<8.0.0",
    "invenio-app>=3.0.0,<4.0.0",
    "invenio-communities>=25.0.0,<26.0.0",
    "invenio-db>=2.0.0,<3.0.0",
    "invenio-drafts-resources>=8.0.0,<9.0.0",
    "invenio-pidstore>=3.0.0,<4.0.0",
    "invenio-records-permissions>=2.0.0,<3.0.0",
    "invenio-records-resources>=9.0.0,<10.0.0",
    "invenio-requests>=12.0.0,<13.0.0",
    "invenio-search>=3.0.0,<4.0.0",
    "invenio-users-resources>=10.0.0,<11.0.0",
    "invenio-vocabularies>=11.0.0,<12.0.0",
    "pytest-invenio>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/pytest_oarepo"

[project.optional-dependencies]
dev = [
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-workflows>=3.0.0,<4.0.0",
    "oarepo-requests>=4.0.0,<5.0.0",
    "pytest>=7.1.2",
]
tests = [
    "pytest>=7.1.2",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pytest_oarepo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pytest_oarepo",
]
