[project]
name = "pytest-oarepo"
version = "4.0.0"
description = ""
readme = "README.md"
license = "MIT"

requires-python = ">=3.14,<3.15"

dependencies = [
    "oarepo[rdm,tests]>=14.2.1b10.dev7,<15.0.0",
    "deepmerge",

    # invenio dependencies with version constraints
    "invenio-app>=3.0.0,<4.0.0",
    "invenio-communities>=26.0.0,<27.0.0",
    "invenio-drafts-resources>=9.0.0,<10.0.0",
    "invenio-search>=3.0.0,<4.0.0",
    "pytest-invenio>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/pytest_oarepo"

[project.optional-dependencies]
dev = [
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-workflows>=3.0.0,<4.0.0",
    "oarepo-requests>=4.0.0,<5.0.0",
    "pytest>=7.1.2",
]
tests = [
    "pytest>=7.1.2",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/pytest_oarepo",
]
