[metadata]
name = pytest-oarepo
version = 1.0.3
description =
authors = Ronald Krist
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.12

packages = find:

[options.extras_require]
local =
    oarepo
    pytest>=7.1.2
    deepmerge
    oarepo-runtime
    oarepo-workflows
    oarepo-requests
    oarepo-communities